infra/policies/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: predator-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
